--- a/catalog/view/theme/d_visualize/template/account/forgotten.twig
+++ b/catalog/view/theme/d_visualize/template/account/forgotten.twig
@@ -8,7 +8,7 @@
       <form action="{{action}}" method="post" enctype="multipart/form-data" class="form-horizontal">
         <fieldset>
           <legend>{{text_your_email}}</legend>
-            {% include partial.form_group.template with partial.form_group|merge({
+            {% include component.form_group.template with component.form_group|merge({
             type:'email',
             id:'input-email',
             name:'email',
@@ -18,6 +18,6 @@
             text_input:entry_email,
             }) %}
         </fieldset>
-          {% include partial.d_button_continue.template with partial.d_button_continue %}
+          {% include component.d_button_continue.template with component.d_button_continue %}
       </form>
 {% endblock %}
