--- a/catalog/view/theme/d_visualize/template/account/order_info.twig
+++ b/catalog/view/theme/d_visualize/template/account/order_info.twig
@@ -139,5 +139,5 @@
         </tbody>
       </table>
       {% endif %}
-      {% include partial.d_button_continue.template with partial.d_button_continue %}
+      {% include component.d_button_continue.template with component.d_button_continue %}
 {% endblock %}
