--- a/catalog/view/theme/d_visualize/template/account/password.twig
+++ b/catalog/view/theme/d_visualize/template/account/password.twig
@@ -5,7 +5,7 @@
       <form action="{{action}}" method="post" enctype="multipart/form-data" class="form-horizontal">
         <fieldset>
           <legend>{{text_password}}</legend>
-            {% include partial.form_group.template with partial.form_group|merge({
+            {% include component.form_group.template with component.form_group|merge({
             type:'password',
             id:'input-password',
             name:'password',
@@ -14,7 +14,7 @@
             classes:'',
             text_input:entry_password,
             }) %}
-            {% include partial.form_group.template with partial.form_group|merge({
+            {% include component.form_group.template with component.form_group|merge({
             type:'password',
             id:'input-confirm',
             name:'confirm',
@@ -25,6 +25,6 @@
             }) %}
 
         </fieldset>
-          {% include partial.d_button_continue.template with partial.d_button_continue %}
+          {% include component.d_button_continue.template with component.d_button_continue %}
       </form>
 {% endblock %}
