--- a/catalog/view/theme/d_visualize/template/account/return_info.twig
+++ b/catalog/view/theme/d_visualize/template/account/return_info.twig
@@ -85,5 +85,5 @@
         </tbody>
       </table>
       {% endif %}
-    {% include partial.d_button_continue.template with  partial.d_button_continue %}
+    {% include component.d_button_continue.template with  component.d_button_continue %}
 {% endblock %}
