--- a/catalog/view/theme/d_visualize/template/checkout/guest_shipping.twig
+++ b/catalog/view/theme/d_visualize/template/checkout/guest_shipping.twig
@@ -2,14 +2,14 @@
     {#this var need to prevent error displaying before render#}
     {% set error_then = true %}
     {% set form = 'inline' %}
-    {% include partial.d_name_field.template with partial.d_name_field %}
-    {% include partial.d_address_field.template with partial.d_address_field %}
+    {% include component.d_name_field.template with component.d_name_field %}
+    {% include component.d_address_field.template with component.d_address_field %}
     {% for custom_field in custom_fields %}
         {% if custom_field.location == 'address' %}
-            {% include partial.d_custom_field.template with partial.d_custom_field|merge({custom_field:custom_field}) %}
+            {% include component.d_custom_field.template with component.d_custom_field|merge({custom_field:custom_field}) %}
         {% endif %}
     {% endfor %}
-    {% include partial.d_button_continue.template with partial.d_button_continue|merge({
+    {% include component.d_button_continue.template with component.d_button_continue|merge({
         button: true,
         id:"button-guest-shipping",
         button_continue: button_continue,
