--- a/catalog/view/theme/d_visualize/template/component/d_account_field_affiliate/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_account_field_affiliate/default.twig
@@ -15,7 +15,7 @@
         </div>
     </div>
 {% endif %}
-{% include partial.d_name_field.template with partial.d_name_field %}
+{% include component.d_name_field.template with component.d_name_field %}
 
 <div class="form-group required">
     <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md"
