--- a/catalog/view/theme/d_visualize/template/product/manufacturer_info.twig
+++ b/catalog/view/theme/d_visualize/template/product/manufacturer_info.twig
@@ -2,5 +2,5 @@
 {% extends template %}
 {% block content %}
     <div class="h2">{{heading_title}}</div>
-    {% include partial.d_product_list.template with  partial.d_product_list %}
+    {% include component.d_product_list.template with  component.d_product_list %}
 {% endblock %}
