--- a/catalog/view/theme/d_visualize/template/product/manufacturer_list.twig
+++ b/catalog/view/theme/d_visualize/template/product/manufacturer_list.twig
@@ -24,6 +24,6 @@
         {% endfor %}
     {% else %}
         <p>{{ text_empty }}</p>
-        {% include partial.d_button_continue.template with  partial.d_button_continue %}
+        {% include component.d_button_continue.template with  component.d_button_continue %}
     {% endif %}
 {% endblock %}
