--- a/catalog/view/theme/d_visualize/template/account/order_list.twig
+++ b/catalog/view/theme/d_visualize/template/account/order_list.twig
@@ -27,7 +27,7 @@
                             <td class="text-left">{{ order.name }}</td>
                             <td class="text-right">{{ order.total }}</td>
                             <td class="text-right">
-                                {% include partial.button.template with partial.button|merge({
+                                {% include component.button.template with component.button|merge({
                                     link: order.view,
                                     style:'link',
                                     classes:'like-warning',
