--- a/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
@@ -1,7 +1,7 @@
 <!-- > d_account_field_default -->
 <div class="vz-account-filed">
     {% if customer_groups|length > 1 %}
-        {% include partial.form_group.template with partial.form_group|merge({
+        {% include component.form_group.template with component.form_group|merge({
             type:'radio',
             id:'input-customer_group',
             name:'customer_group',
@@ -16,8 +16,8 @@
             error:error_customer_group,
         }) %}
     {% endif %}
-    {% include partial.d_name_field.template with  partial.d_name_field|merge({form:form}) %}
-    {% include partial.form_group.template with partial.form_group|merge({
+    {% include component.d_name_field.template with  component.d_name_field|merge({form:form}) %}
+    {% include component.form_group.template with component.form_group|merge({
         type:'email',
         id:'input-email',
         name:'email',
@@ -28,7 +28,7 @@
         error:error_email
     }) %}
 
-    {% include partial.form_group.template with partial.form_group|merge({
+    {% include component.form_group.template with component.form_group|merge({
         type:'text',
         id:'input-telephone',
         name:'telephone',
@@ -40,7 +40,7 @@
     }) %}
 
     {% if constant('VERSION') < '3.0.0.0' %}
-        {% include partial.form_group.template with partial.form_group|merge({
+        {% include component.form_group.template with component.form_group|merge({
             type:'text',
             id:'input-fax',
             name:'fax',
