--- a/catalog/view/theme/d_visualize/template/component/d_button_submit_old/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_button_submit_old/default.twig
@@ -2,7 +2,7 @@
 <div class="vz-button_submit vz-d_button_submit_default">
     <div class="vz-button_submit__back">
         {% if button_back %}
-            {% include partial.button.template with partial.button|merge({
+            {% include component.button.template with component.button|merge({
             link: back,
             style:'default',
             classes:'btn-shrink btn-block-sm',
@@ -16,7 +16,7 @@
             <span>
               {{ text_agree }}
             </span>
-                {% include partial.input.template with partial.input|merge({
+                {% include component.input.template with component.input|merge({
                     type:'checkbox',
                     name:'agree',
                     value:'1',
@@ -25,14 +25,14 @@
             </div>
         {% endif %}
         {% if continue %}
-            {% include partial.button.template with partial.button|merge({
+            {% include component.button.template with component.button|merge({
             link: continue,
             style:'default',
             classes:'btn-block-sm',
             text_button:button_continue,
             }) %}
         {% elseif button_continue %}
-            {% include partial.input.template with partial.input|merge({
+            {% include component.input.template with component.input|merge({
             type:'submit',
             value:button_continue,
             button:true,
