--- a/catalog/view/theme/d_visualize/template/component/d_product_sort/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_sort/default.twig
@@ -18,7 +18,7 @@
             <a href="{{ compare }}" id="compare-total" class="btn vz-button btn-link vz-product-sort__compare">{{ text_compare }}</a>
         </div>
         <div class="col-lg-4 col-md-6 col-6 text-right">
-            {% include partial.input.template with partial.input|merge({
+            {% include component.input.template with component.input|merge({
                 type:'select',
                 id:'input-sort',
                 select_values:sorts,
@@ -33,7 +33,7 @@
             }) %}
         </div>
         <div class="col-lg-3 col-md-6 col-6 text-right">
-            {% include partial.input.template with partial.input|merge({
+            {% include component.input.template with component.input|merge({
                 type:'select',
                 id:'input-limit',
                 select_values:limits,
