--- a/catalog/view/theme/d_visualize/template/component/d_product_thumb/opencart.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_thumb/opencart.twig
@@ -7,7 +7,7 @@
             <h4 class="heading-h4"><a href="{{ product.href }}">{{ product.name }}</a></h4>
             <p>{{ product.description }}</p>
             {% if product.rating %}
-                {% include partial.rating.template with rating.button|merge({
+                {% include component.rating.template with rating.button|merge({
                     rating:product.rating
                 }) %}
             {% endif %}
@@ -28,19 +28,19 @@
         <div class="button-group vz-product-thumb__group">
             {% set spec_btn_text= '<i class="fa fa-shopping-cart"></i>'~
                 '<span class="hidden-xs hidden-sm hidden-md">'~ button_cart~'</span>' %}
-            {% include partial.button.template with partial.button|merge({
+            {% include component.button.template with component.button|merge({
                 button:'cart.add('~ product.product_id ~', '~ minimum ~')',
                 style:'default',
                 classes:'btn-buy vz-product-thumb__button',
                 text_button: spec_btn_text
             }) %}
-            {% include partial.button.template with partial.button|merge({
+            {% include component.button.template with component.button|merge({
                 button:'wishlist.add('~ product.product_id ~')',
                 style:'default',
                 classes:'vz-product-thumb__button',
                 icon:'fas fa-heart'
             }) %}
-            {% include partial.button.template with partial.button|merge({
+            {% include component.button.template with component.button|merge({
                 button:'compare.add('~ product.product_id ~')',
                 style:'default',
                 classes:'vz-product-thumb__button',
