--- a/catalog/view/theme/d_visualize/template/component/d_review/modal.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_review/modal.twig
@@ -32,12 +32,12 @@
                     </div>
                     <div class="modal-footer d-flex justify-content-end align-items-center">
                         <div class="review_rating_wrap">
-                            {% include partial.d_rating.template with partial.d_rating %}
+                            {% include component.d_rating.template with component.d_rating %}
                         </div>
                         {{ captcha }}
                         <div class="buttons clearfix">
                             <div class="pull-right">
-                                {% include partial.button.template with partial.button|merge({
+                                {% include component.button.template with component.button|merge({
                                     button: true,
                                     id:'button-review',
                                     style:'primary',
