--- a/catalog/view/theme/d_visualize/template/component/product/tabs/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/product/tabs/default.twig
@@ -33,7 +33,7 @@
         {% endif %}
         {% if review_status %}
             <div class="vz-product-product__tabs__content__pane tab-pane" id="tab-review">
-                {% include partial.d_review.template with partial.d_review %}
+                {% include component.d_review.template with component.d_review %}
             </div>
         {% endif %}</div>
 </div>
