--- a/catalog/view/theme/d_visualize/template/component/product_category/opencart.twig
+++ b/catalog/view/theme/d_visualize/template/component/product_category/opencart.twig
@@ -36,7 +36,7 @@
             {% endif %}
         {% endif %}
     </div>
-    {% include partial.d_product_list.template with  partial.d_product_list %}
+    {% include component.d_product_list.template with  component.d_product_list %}
 </div>
 
 
