--- a/catalog/view/theme/d_visualize/template/product/search.twig
+++ b/catalog/view/theme/d_visualize/template/product/search.twig
@@ -7,7 +7,7 @@
         <label class="control-label" for="input-search">{{ entry_search }}</label>
         <div class="row">
             <div class="col-sm-4">
-                {% include partial.input.template with partial.input|merge({
+                {% include component.input.template with component.input|merge({
                 type:'text',
                 id:'input-search',
                 name:'search',
@@ -47,7 +47,7 @@
             <div class="col-sm-3">
 
                 <label class="checkbox-inline">
-                    {% include partial.input.template with partial.input|merge({
+                    {% include component.input.template with component.input|merge({
                     type:'checkbox',
                     name:'sub_category',
                     value:'1',
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-12">
                 <label class="checkbox-inline">
-                    {% include partial.input.template with partial.input|merge({
+                    {% include component.input.template with component.input|merge({
                     type:'checkbox',
                     id:'description',
                     name:'description',
@@ -69,7 +69,7 @@
                     }) %}
                     {{ entry_description }}
                 </label>
-                {% include partial.input.template with partial.input|merge({
+                {% include component.input.template with component.input|merge({
                 type:'button',
                 id:'button-search',
                 style:'primary',
@@ -79,7 +79,7 @@
         </div>
         {#<input type="button" value="{{button_search}}" id="button-search" class="btn btn-primary" />#}
         <div class="h2">{{ text_search }}</div>
-        {% include partial.d_product_list.template with  partial.d_product_list %}
+        {% include component.d_product_list.template with  component.d_product_list %}
 
         <script type="text/javascript"><!--
 			$(document).ready(function () {
