--- a/catalog/view/theme/d_visualize/template/product/special.twig
+++ b/catalog/view/theme/d_visualize/template/product/special.twig
@@ -27,7 +27,7 @@
         <div class="row">
             {% for product in products %}
                 <div class="product-layout product-list col-xs-4">
-                    {% include partial.d_product_thumb.template with partial.d_product_thumb|merge(product) %}
+                    {% include component.d_product_thumb.template with component.d_product_thumb|merge(product) %}
                 </div>
             {% endfor %}
         </div>
